--- a/data_manipulation.ipynb
+++ b/data_manipulation.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,11 +35,893 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Image Index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Finding Labels",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Follow-up #",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Patient ID",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Patient Age",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Patient Gender",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "View Position",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "OriginalImage[Width",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Height]",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "OriginalImagePixelSpacing[x",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "y]",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "WEIGHTS",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "train",
+         "rawType": "bool",
+         "type": "boolean"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "a16e1a28-29d8-4ca0-ba63-a8b9b91f73e4",
+       "rows": [
+        [
+         "0",
+         "00000018_000.png",
+         "No Finding",
+         "0",
+         "18",
+         "75",
+         "M",
+         "PA",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "1",
+         "00000056_000.png",
+         "Nodule|Pneumonia",
+         "0",
+         "56",
+         "76",
+         "M",
+         "PA",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "2",
+         "00000056_001.png",
+         "Effusion",
+         "1",
+         "56",
+         "76",
+         "M",
+         "PA",
+         "2992",
+         "2991",
+         "0.143",
+         "0.143",
+         "1",
+         "True"
+        ],
+        [
+         "3",
+         "00000104_000.png",
+         "Pleural_Thickening",
+         "0",
+         "104",
+         "68",
+         "F",
+         "PA",
+         "2906",
+         "2991",
+         "0.143",
+         "0.143",
+         "1",
+         "True"
+        ],
+        [
+         "4",
+         "00000104_001.png",
+         "No Finding",
+         "1",
+         "104",
+         "69",
+         "F",
+         "PA",
+         "2734",
+         "2991",
+         "0.143",
+         "0.143",
+         "1",
+         "True"
+        ],
+        [
+         "5",
+         "00000160_000.png",
+         "No Finding",
+         "0",
+         "160",
+         "69",
+         "F",
+         "PA",
+         "2992",
+         "2991",
+         "0.143",
+         "0.143",
+         "1",
+         "True"
+        ],
+        [
+         "6",
+         "00000171_000.png",
+         "No Finding",
+         "0",
+         "171",
+         "60",
+         "F",
+         "PA",
+         "2048",
+         "2500",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "7",
+         "00000179_000.png",
+         "No Finding",
+         "0",
+         "179",
+         "63",
+         "M",
+         "AP",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "8",
+         "00000179_001.png",
+         "Infiltration",
+         "1",
+         "179",
+         "63",
+         "M",
+         "AP",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "9",
+         "00000179_002.png",
+         "Atelectasis|Infiltration",
+         "2",
+         "179",
+         "63",
+         "M",
+         "AP",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "10",
+         "00000179_003.png",
+         "Infiltration",
+         "3",
+         "179",
+         "63",
+         "M",
+         "AP",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "11",
+         "00000179_004.png",
+         "Consolidation|Infiltration",
+         "4",
+         "179",
+         "63",
+         "M",
+         "AP",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "12",
+         "00000179_005.png",
+         "Consolidation|Infiltration",
+         "5",
+         "179",
+         "63",
+         "M",
+         "AP",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "13",
+         "00000179_006.png",
+         "Atelectasis|Effusion",
+         "6",
+         "179",
+         "63",
+         "M",
+         "AP",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "14",
+         "00000179_007.png",
+         "Consolidation|Effusion",
+         "7",
+         "179",
+         "63",
+         "M",
+         "AP",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "15",
+         "00000184_000.png",
+         "No Finding",
+         "0",
+         "184",
+         "60",
+         "M",
+         "PA",
+         "2048",
+         "2500",
+         "0.171",
+         "0.171",
+         "1",
+         "True"
+        ],
+        [
+         "16",
+         "00000184_001.png",
+         "No Finding",
+         "1",
+         "184",
+         "65",
+         "M",
+         "PA",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "17",
+         "00000220_000.png",
+         "No Finding",
+         "0",
+         "220",
+         "66",
+         "M",
+         "PA",
+         "2544",
+         "3056",
+         "0.139",
+         "0.139",
+         "1",
+         "True"
+        ],
+        [
+         "18",
+         "00000223_000.png",
+         "No Finding",
+         "0",
+         "223",
+         "53",
+         "M",
+         "PA",
+         "2906",
+         "2925",
+         "0.143",
+         "0.143",
+         "1",
+         "False"
+        ],
+        [
+         "19",
+         "00000244_000.png",
+         "No Finding",
+         "0",
+         "244",
+         "43",
+         "F",
+         "AP",
+         "3056",
+         "2544",
+         "0.139",
+         "0.139",
+         "1",
+         "True"
+        ],
+        [
+         "20",
+         "00000244_001.png",
+         "No Finding",
+         "1",
+         "244",
+         "38",
+         "F",
+         "AP",
+         "2048",
+         "2500",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "21",
+         "00000244_002.png",
+         "Atelectasis",
+         "2",
+         "244",
+         "39",
+         "F",
+         "PA",
+         "2790",
+         "2821",
+         "0.143",
+         "0.143",
+         "1",
+         "True"
+        ],
+        [
+         "22",
+         "00000284_000.png",
+         "Hernia",
+         "0",
+         "284",
+         "86",
+         "F",
+         "PA",
+         "2992",
+         "2991",
+         "0.143",
+         "0.143",
+         "1",
+         "False"
+        ],
+        [
+         "23",
+         "00000284_001.png",
+         "Hernia",
+         "1",
+         "284",
+         "81",
+         "F",
+         "PA",
+         "2048",
+         "2500",
+         "0.168",
+         "0.168",
+         "1",
+         "False"
+        ],
+        [
+         "24",
+         "00000284_002.png",
+         "Hernia",
+         "2",
+         "284",
+         "82",
+         "F",
+         "PA",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "False"
+        ],
+        [
+         "25",
+         "00000284_003.png",
+         "Hernia",
+         "3",
+         "284",
+         "83",
+         "F",
+         "PA",
+         "2482",
+         "2509",
+         "0.143",
+         "0.143",
+         "1",
+         "False"
+        ],
+        [
+         "26",
+         "00000284_004.png",
+         "Cardiomegaly|Hernia",
+         "4",
+         "284",
+         "84",
+         "F",
+         "PA",
+         "2992",
+         "2991",
+         "0.143",
+         "0.143",
+         "1",
+         "False"
+        ],
+        [
+         "27",
+         "00000284_005.png",
+         "Cardiomegaly|Effusion|Hernia",
+         "5",
+         "284",
+         "85",
+         "F",
+         "PA",
+         "2524",
+         "3056",
+         "0.139",
+         "0.139",
+         "1",
+         "False"
+        ],
+        [
+         "28",
+         "00000307_000.png",
+         "Atelectasis",
+         "0",
+         "307",
+         "57",
+         "M",
+         "PA",
+         "2654",
+         "2777",
+         "0.143",
+         "0.143",
+         "1",
+         "True"
+        ],
+        [
+         "29",
+         "00000310_000.png",
+         "No Finding",
+         "0",
+         "310",
+         "60",
+         "M",
+         "AP",
+         "2500",
+         "2048",
+         "0.171",
+         "0.171",
+         "1",
+         "True"
+        ],
+        [
+         "30",
+         "00000310_001.png",
+         "Pneumonia",
+         "1",
+         "310",
+         "60",
+         "M",
+         "AP",
+         "2500",
+         "2048",
+         "0.171",
+         "0.171",
+         "1",
+         "True"
+        ],
+        [
+         "31",
+         "00000310_002.png",
+         "No Finding",
+         "2",
+         "310",
+         "60",
+         "M",
+         "PA",
+         "2048",
+         "2500",
+         "0.171",
+         "0.171",
+         "1",
+         "True"
+        ],
+        [
+         "32",
+         "00000310_003.png",
+         "No Finding",
+         "3",
+         "310",
+         "60",
+         "M",
+         "AP",
+         "2500",
+         "2048",
+         "0.171",
+         "0.171",
+         "1",
+         "True"
+        ],
+        [
+         "33",
+         "00000310_004.png",
+         "Atelectasis",
+         "4",
+         "310",
+         "60",
+         "M",
+         "PA",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "34",
+         "00000310_005.png",
+         "No Finding",
+         "5",
+         "310",
+         "60",
+         "M",
+         "AP",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "35",
+         "00000310_006.png",
+         "Infiltration",
+         "6",
+         "310",
+         "61",
+         "M",
+         "AP",
+         "2500",
+         "2048",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "36",
+         "00000320_000.png",
+         "No Finding",
+         "0",
+         "320",
+         "64",
+         "M",
+         "PA",
+         "2500",
+         "2048",
+         "0.171",
+         "0.171",
+         "1",
+         "False"
+        ],
+        [
+         "37",
+         "00000339_000.png",
+         "No Finding",
+         "0",
+         "339",
+         "57",
+         "F",
+         "PA",
+         "2992",
+         "2991",
+         "0.143",
+         "0.143",
+         "1",
+         "True"
+        ],
+        [
+         "38",
+         "00000339_001.png",
+         "Infiltration",
+         "1",
+         "339",
+         "63",
+         "F",
+         "PA",
+         "2992",
+         "2991",
+         "0.143",
+         "0.143",
+         "1",
+         "True"
+        ],
+        [
+         "39",
+         "00000357_000.png",
+         "No Finding",
+         "0",
+         "357",
+         "73",
+         "F",
+         "PA",
+         "2762",
+         "2851",
+         "0.143",
+         "0.143",
+         "1",
+         "True"
+        ],
+        [
+         "40",
+         "00000359_000.png",
+         "No Finding",
+         "0",
+         "359",
+         "80",
+         "F",
+         "PA",
+         "2544",
+         "3056",
+         "0.139",
+         "0.139",
+         "1",
+         "True"
+        ],
+        [
+         "41",
+         "00000359_001.png",
+         "No Finding",
+         "1",
+         "359",
+         "81",
+         "F",
+         "PA",
+         "2516",
+         "2846",
+         "0.143",
+         "0.143",
+         "1",
+         "True"
+        ],
+        [
+         "42",
+         "00000359_002.png",
+         "Emphysema",
+         "2",
+         "359",
+         "82",
+         "F",
+         "PA",
+         "2522",
+         "2991",
+         "0.143",
+         "0.143",
+         "1",
+         "True"
+        ],
+        [
+         "43",
+         "00000359_003.png",
+         "No Finding",
+         "3",
+         "359",
+         "83",
+         "F",
+         "PA",
+         "2020",
+         "2021",
+         "0.194311",
+         "0.194311",
+         "1",
+         "True"
+        ],
+        [
+         "44",
+         "00000359_004.png",
+         "No Finding",
+         "4",
+         "359",
+         "70",
+         "F",
+         "PA",
+         "2456",
+         "2968",
+         "0.139",
+         "0.139",
+         "1",
+         "True"
+        ],
+        [
+         "45",
+         "00000359_005.png",
+         "No Finding",
+         "5",
+         "359",
+         "71",
+         "F",
+         "PA",
+         "2048",
+         "2500",
+         "0.171",
+         "0.171",
+         "1",
+         "True"
+        ],
+        [
+         "46",
+         "00000359_006.png",
+         "No Finding",
+         "6",
+         "359",
+         "72",
+         "F",
+         "PA",
+         "2048",
+         "2500",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "47",
+         "00000359_007.png",
+         "Fibrosis",
+         "7",
+         "359",
+         "74",
+         "F",
+         "PA",
+         "2048",
+         "2500",
+         "0.168",
+         "0.168",
+         "1",
+         "True"
+        ],
+        [
+         "48",
+         "00000359_008.png",
+         "Fibrosis",
+         "8",
+         "359",
+         "75",
+         "F",
+         "PA",
+         "2606",
+         "2805",
+         "0.143",
+         "0.143",
+         "1",
+         "True"
+        ],
+        [
+         "49",
+         "00000359_009.png",
+         "No Finding",
+         "9",
+         "359",
+         "76",
+         "F",
+         "PA",
+         "2546",
+         "2991",
+         "0.143",
+         "0.143",
+         "1",
+         "True"
+        ]
+       ],
+       "shape": {
+        "columns": 13,
+        "rows": 5243
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -299,7 +1181,7 @@
        "[5243 rows x 13 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +1260,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "project_final_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -392,7 +1274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
