Reweighing by attribute

--- a/project.ipynb
+++ b/project.ipynb
@@ -13362,6 +13362,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reweight_by_attribute(df, attr_name, privileged_val, filename):\n",
+    "    # Créer un StandardDataset uniquement pour cet attribut\n",
+    "    dataset = StandardDataset(\n",
+    "        df=df,\n",
+    "        label_name=\"Disease\",\n",
+    "        favorable_classes=[1],\n",
+    "        protected_attribute_names=[attr_name],\n",
+    "        privileged_classes=[[privileged_val]],\n",
+    "        instance_weights_name=\"WEIGHTS\",\n",
+    "        categorical_features=[],\n",
+    "        na_values=[\"?\", \"Unknown/Invalid\"],\n",
+    "        custom_preprocessing=None,\n",
+    "        metadata=None\n",
+    "    )\n",
+    "\n",
+    "    # Gérer dynamiquement la valeur non-privilégiée\n",
+    "    unique_vals = df[attr_name].unique()\n",
+    "\n",
+    "    if isinstance(privileged_val, bool):\n",
+    "        unprivileged_val = not privileged_val\n",
+    "    elif isinstance(privileged_val, (str, int, np.integer)):\n",
+    "        unprivileged_val = [v for v in unique_vals if v != privileged_val][0]\n",
+    "    else:\n",
+    "        raise ValueError(f\"Type non géré pour l'attribut {attr_name} : {type(privileged_val)}\")\n",
+    "\n",
+    "    # Appliquer Reweighing\n",
+    "    RW = Reweighing(\n",
+    "        privileged_groups=[{attr_name: privileged_val}],\n",
+    "        unprivileged_groups=[{attr_name: unprivileged_val}]\n",
+    "    )\n",
+    "    RW.fit(dataset)\n",
+    "    dataset_rw = RW.transform(dataset)\n",
+    "\n",
+    "    # Convertir en DataFrame + exporter CSV\n",
+    "    df_rw = dataset_rw.convert_to_dataframe()[0]\n",
+    "    df_rw[\"WEIGHTS\"] = dataset_rw.instance_weights\n",
+    "    df_rw.to_csv(filename, index=False)\n",
+    "    print(f\"CSV généré : {filename}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def encode_categorical_columns(df):\n",
+    "    df_encoded = df.copy()\n",
+    "    for col in df_encoded.columns:\n",
+    "        if df_encoded[col].dtype == \"object\":\n",
+    "            df_encoded[col] = df_encoded[col].astype(\"category\").cat.codes\n",
+    "    return df_encoded\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV généré : weights_view.csv\n",
+      "CSV généré : weights_age.csv\n",
+      "CSV généré : weights_followup.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\firda\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\aif360\\datasets\\standard_dataset.py:122: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '1.0' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.\n",
+      "  df.loc[priv, attr] = privileged_values[0]\n",
+      "C:\\Users\\firda\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\aif360\\datasets\\standard_dataset.py:122: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '1.0' has dtype incompatible with bool, please explicitly cast to a compatible dtype first.\n",
+      "  df.loc[priv, attr] = privileged_values[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_encoded = encode_categorical_columns(df_filtered)\n",
+    "\n",
+    "# Et ensuite tu fais tes appels :\n",
+    "reweight_by_attribute(df=df_encoded, attr_name=\"View Position\", privileged_val=0, filename=\"weights_view.csv\")\n",
+    "reweight_by_attribute(df=df_encoded, attr_name=\"Age Sensible\", privileged_val=1, filename=\"weights_age.csv\")\n",
+    "reweight_by_attribute(df=df_encoded, attr_name=\"Follow-up Sensible\", privileged_val=1, filename=\"weights_followup.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
