--- a/project.ipynb
+++ b/project.ipynb
@@ -13362,7 +13362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13402,13 +13402,13 @@
     "    # Convertir en DataFrame + exporter CSV\n",
     "    df_rw = dataset_rw.convert_to_dataframe()[0]\n",
     "    df_rw[\"WEIGHTS\"] = dataset_rw.instance_weights\n",
-    "    df_rw.to_csv(filename, index=False)\n",
+    "    df_rw.to_csv(\"./data/\" + filename, index=False)\n",
     "    print(f\"CSV généré : {filename}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13422,7 +13422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
