classifieur et postprocessing

--- a/train_classifieur.ipynb
+++ b/train_classifieur.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -330,6 +330,13 @@
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "HPU available: False, using: 0 HPUs\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start training\n"
      ]
     },
     {
@@ -357,7 +364,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start training\n",
       "Sanity Checking: |          | 0/? [00:00<?, ?it/s]"
      ]
     },
@@ -386,7 +392,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 128/128 [16:44<00:00,  0.13it/s, v_num=5]"
+      "Epoch 1: 100%|██████████| 128/128 [27:15<00:00,  0.08it/s, v_num=9]"
      ]
     },
     {
@@ -400,8 +406,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 128/128 [16:45<00:00,  0.13it/s, v_num=5]\n",
-      "End of training 2514.666804790497\n"
+      "Epoch 1: 100%|██████████| 128/128 [27:16<00:00,  0.08it/s, v_num=9]\n",
+      "End of training 3693.3841531276703\n"
      ]
     }
    ],
@@ -416,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -424,11 +430,11 @@
      "output_type": "stream",
      "text": [
       "Start prediction on train dataset\n",
-      "Predictions done in 293.53436064720154\n",
+      "Predictions done in 701.4373762607574\n",
       "Start prediction on validation dataset\n",
-      "Predictions done in 378.5651767253876\n",
-      "0.7095737860717\n",
-      "0.7140949837879077\n"
+      "Predictions done in 882.1514019966125\n",
+      "0.70324325265398\n",
+      "0.7018882319282853\n"
      ]
     }
    ],
