Cleaning and comments

--- a/train_classifieur.ipynb
+++ b/train_classifieur.ipynb
@@ -615,6 +615,13 @@
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start training\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -639,7 +646,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start training\n",
       "Sanity Checking: |          | 0/? [00:00<?, ?it/s]"
      ]
     },
@@ -668,7 +674,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 128/128 [23:09<00:00,  0.09it/s, v_num=8]"
+      "Epoch 1: 100%|██████████| 128/128 [16:56<00:00,  0.13it/s, v_num=10]"
      ]
     },
     {
@@ -682,8 +688,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 128/128 [23:09<00:00,  0.09it/s, v_num=8]\n",
-      "End of training 2421.5503668785095\n"
+      "Epoch 1: 100%|██████████| 128/128 [16:56<00:00,  0.13it/s, v_num=10]\n",
+      "End of training 1948.6674315929413\n"
      ]
     }
    ],
@@ -706,11 +712,11 @@
      "output_type": "stream",
      "text": [
       "Start prediction on train dataset\n",
-      "Predictions done in 353.1675353050232\n",
+      "Predictions done in 325.5647511482239\n",
       "Start prediction on validation dataset\n",
-      "Predictions done in 458.46593403816223\n",
-      "0.6691117283078227\n",
-      "0.6803356856761397\n"
+      "Predictions done in 414.4543836116791\n",
+      "0.6485568247687048\n",
+      "0.6582109479305741\n"
      ]
     }
    ],
