Finished clean up

--- a/train_classifieur.ipynb
+++ b/train_classifieur.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 128/128 [29:01<00:00,  0.07it/s, v_num=4]"
+      "Epoch 1: 100%|██████████| 128/128 [20:53<00:00,  0.10it/s, v_num=11]"
      ]
     },
     {
@@ -259,8 +259,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 128/128 [29:02<00:00,  0.07it/s, v_num=4]\n",
-      "End of training 3528.510983943939\n"
+      "Epoch 1: 100%|██████████| 128/128 [20:53<00:00,  0.10it/s, v_num=11]\n",
+      "End of training 3429.2413082122803\n"
      ]
     }
    ],
@@ -268,7 +268,7 @@
     "ckpt_path, ckpt_score = train_classifier(\n",
     "    logdir=\"./expe_log/\",\n",
     "    datadir=\"./data/\",\n",
-    "    csv=\"./data/metadata_rw1.csv\",\n",
+    "    csv=\"./data/metadata_rw.csv\",\n",
     "    max_epochs = 2\n",
     ")"
    ]
@@ -283,19 +283,19 @@
      "output_type": "stream",
      "text": [
       "Start prediction on train dataset\n",
-      "Predictions done in 586.4826426506042\n",
+      "Predictions done in 359.3302175998688\n",
       "Start prediction on validation dataset\n",
-      "Predictions done in 767.4870607852936\n",
-      "0.6387243486150966\n",
-      "0.6198741178714476\n"
+      "Predictions done in 453.536696434021\n",
+      "0.6797645162413539\n",
+      "0.6835781041388518\n"
      ]
     }
    ],
    "source": [
     "pred_classifier(\n",
     "    datadir=\"./data/\",\n",
-    "    csv_in=\"./data/metadata_rw1.csv\",\n",
-    "    csv_out=\"./expe_log/preds_rw1.csv\",\n",
+    "    csv_in=\"./data/metadata_rw.csv\",\n",
+    "    csv_out=\"./expe_log/preds_rw.csv\",\n",
     "    ckpt_path = ckpt_path\n",
     ")"
    ]
